# serial-sniffer

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  cleanModules.sh  rebuildMF
LGSniffer/: LGSniffer  SnifferTests
LGSniffer/scripts/: LGSniffer.sh  SnifferTests.sh  loadModules.sh  loadSerialBridge.sh  unloadSerialBridge.sh
libsniffer/: CMakeLists.txt
libsniffer/src/: libsniffer.cpp  libsniffer.h  snifferData.cpp  snifferData.h
libsniffer/src/libs/: helper.cpp  helper.h  kernelComm.cpp  kernelComm.h
modules/: Makefile
modules/interceptor/: .built-in.a.cmd  .functions_override.ko.cmd  .functions_override.mod.cmd  .functions_override.mod.o.cmd  .functions_override.o.cmd  Makefile  Module.symvers  functions_override.c  functions_override.ko  functions_override.mod  functions_override.mod.c  modules.order
modules/serial-bridge/: .built-in.a.cmd  .serial_bridge.ko.cmd  .serial_bridge.mod.cmd  .serial_bridge.mod.o.cmd  .serial_bridge.o.cmd  Makefile  Module.symvers  modules.order  serial_bridge.c  serial_bridge.ko  serial_bridge.mod  serial_bridge.mod.c  serial_bridge_main.c
modules/serial-bridge/components/: data_sender.c  data_sender.h
modules/serial-bridge/include/: netlink_data.h
modules/serial-bridge/services/: .user_comm_services.o.cmd  user_comm_services.c  user_comm_services.h
serialSniffer/: CMakeLists.txt  context.cpp  context.h  main.cpp
serialSniffer/components/logManager/: logManager.cpp  logManager.h
serialSniffer/dto/: dto.cpp  dto.h
serialSniffer/lib/: serialLibs.h
serialSniffer/services/: services.cpp  services.h  systemServices.cpp  systemServices.h
serialSniffer/utils/: utils.cpp  utils.h
serialSniffer/utils/data_structure/: blocking_queue.c  blocking_queue.h
serialSniffer/utils/logger/: logger.cpp  logger.h
serialSniffer/utils/logger/appenders/: appenders.cpp  appenders.h
shared/utils/: c_timer.cpp  c_timer.h  timer.cpp  timer.h
tests/: CMakeLists.txt
tests/integration/libsniffer/: guards.h  helpersIntegration.cpp  kernelCommIntegration.cpp
tests/unit/: utility.cpp
tests/unit/libsniffer/: kernelCommUnit.cpp
